--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply font-body text-[#232428];
+  }
+}
+
+@layer components {
+  .navLinks {
+    @apply hidden cursor-pointer text-lg tracking-wide opacity-75 transition hover:underline hover:opacity-100 lg:inline;
+  }
+  .headerIcon {
+    @apply h-6 w-6 cursor-pointer rounded-full opacity-75 transition hover:opacity-100;
+  }
+  .navLinksMenu {
+    @apply flex w-full cursor-pointer flex-col border-b px-5 py-3 text-lg uppercase tracking-wide text-gray-500;
+  }
+  .btn {
+    @apply inline-flex cursor-pointer items-center justify-center space-x-3 rounded-lg border border-indigo-500 bg-gradient-to-br from-purple-500 via-indigo-500 to-indigo-500 px-5 py-3 text-center text-base font-medium text-indigo-100 shadow-sm hover:text-white;
+  }
+}
